k8s/00-namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: auth
  labels:
    name: auth
---
apiVersion: v1
kind: Namespace
metadata:
  name: microservices
  labels:
    name: microservices
---
apiVersion: v1
kind: Namespace
metadata:
  name: messaging
  labels:
    name: messaging
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
